--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color: #1e1e1e;
+  background-color: #303030;
   color: #ffffff;
   font-family: 'DM Sans', sans-serif;
   display: flex;
@@ -17,10 +17,9 @@ body {
   max-width: 800px;
   width: 100%;
   padding: 40px;
-  background-color: #323232;
+  background-color: #32323200;
   border-radius: 10px;
 }
-
 
 h1 {
   font-size: 2rem;
@@ -39,7 +38,31 @@ pre {
   overflow-x: auto;
   background-color: #1e1e1e;
   padding: 20px;
+  border: 1px solid #444; 
 }
+pre:hover {
+  box-shadow: 0 0 8px #88888833;
+}
+
+pre {
+  transition: box-shadow 0.3s ease;
+}
+.code-panel {
+  perspective: 1000px;
+}
+
+.code-panel:hover {
+  z-index: 1;
+}
+/* 
+pre {
+  transform-style: preserve-3d;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+pre.tilted {
+  box-shadow: 0 0px 0px rgba(0, 0, 0, 0.3);
+} */
 
 code {
   font-family: 'Fira Code', monospace;
@@ -62,3 +85,52 @@ code {
   margin-bottom: 20px;
   font-style: normal;
 }
+
+
+.toc-panel {
+  position: fixed;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+  background-color: #2a2a2a7e;
+  padding: 15px 20px;
+  border-radius: 12px;
+  color: white;
+  box-shadow: 0 0 0px #00000060;
+  width: 180px;
+  max-height: 70vh;
+  overflow-y: auto;
+  z-index: 1000;
+  backdrop-filter: blur(10px);
+}
+
+.toc-panel h3 {
+  font-size: 1.2rem;
+  border-bottom: 1px solid #444;
+  padding-bottom: 5px;
+  margin-bottom: 10px;
+}
+
+.toc-panel ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.toc-panel ul li {
+  margin: 10px 0;
+}
+
+.toc-panel ul li a {
+  color: #b1b1b1;
+  text-decoration: none;
+  font-size: 0.95rem;
+}
+
+.toc-panel ul li a:hover {
+  text-decoration: none;
+  color: #ffffff;
+  text-shadow: 0 0 0px #ffffff;
+}
+
+
